--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,6 +38,7 @@
           <li><a href="/">Home</a></li>
           <li><a href="/archives">Archive</a></li>
           <li><a href="/about">About</a></li>
+          <li><a href="http://www.github.com/pigpenguin">Github</a></li>
           <li><a href="/feed.xml">RSS Feed</a></li>
         </ul>
       </nav>
